--- a/OtwarteMigawkiApp/src/main/resources/application.properties
+++ b/OtwarteMigawkiApp/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.security.user.name=u1
 spring.security.user.password=zaq1
+
+server.ssl.key-store=classpath:keystore/keystore.p12
+server.ssl.key-store-password= modelbase
+server.ssl.key-store-type= PKCS12
+server.ssl.key-alias= mb_key
+server.ssl.key-password= modelbase
+
+server.servlet.session.cookie.secure=true
