--- a/otwartemigawkifront/package.json
+++ b/otwartemigawkifront/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,6 +32,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
