--- a/OtwarteMigawkiApp/src/main/resources/application.properties
+++ b/OtwarteMigawkiApp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=OtwarteMigawkiApp
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/otwarteMigawki
 spring.datasource.username=root
 spring.datasource.password=zaq12wsx
