--- a/OtwarteMigawkiApp/src/main/resources/application.properties
+++ b/OtwarteMigawkiApp/src/main/resources/application.properties
@@ -8,11 +8,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.security.user.name=u1
 spring.security.user.password=zaq1
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.cloud.gcp.credentials.location=classpath:keystore/google-cloud-storage.json
 
 server.ssl.key-store=classpath:keystore/keystore.p12
 server.ssl.key-store-password= modelbase
 server.ssl.key-store-type= PKCS12
 server.ssl.key-alias= mb_key
 server.ssl.key-password= modelbase
+
 
 server.servlet.session.cookie.secure=true
